# Back-End/http/response-message.js
@@ -2,6 +2,10 @@
 const DEL_LOCATION_SUCCESS = "Successfully deleted location with name";
 const DEL_POST_SUCCESS = "Successfully deleted post with id";
 
+//DELETE fail messages
+const DEL_LOCATION_ERROR = "Failed to delete location with name";
+const DEL_POST_ERROR = "Failed to delete post with id";
+
 //GET success messages
 const GET_POSTS_SUCCESS = "Successfully fetched all posts for location";
 const GET_LOCATIONS_SUCCESS = "Succesfully fetched all locations";
@@ -20,7 +24,8 @@ const DUPLICATE_ENTRY_ERROR = "Duplicate entry for username";
 //login fail messages
 const INCORRECT_USERNAME = "Login Failed, incorrect username";
 const INCORRECT_PASSWORD = "Login Failed, incorrect password";
-const FORBIDDEN_ACCESS = "Forbidden Access, you must be an admin to access this resource";
+const FORBIDDEN_ACCESS =
+  "Forbidden Access, you must be an admin to access this resource";
 
 //PUT sucess messages
 const PUT_USER_SUCCESS = "Successfully updated user information";
@@ -28,7 +33,9 @@ const PUT_POST_SUCCESS = "Successfully updated user information";
 
 module.exports = {
   DEL_LOCATION_SUCCESS,
+  DEL_LOCATION_ERROR,
   DEL_POST_SUCCESS,
+  DEL_POST_ERROR,
   DUPLICATE_ENTRY_ERROR,
   FORBIDDEN_ACCESS,
   GET_POSTS_SUCCESS,
